--- a/index.html
+++ b/index.html
@@ -259,6 +259,7 @@
 					<a href="https://github.com/TatoAlves" target="_blank">Tato Alves</a>
 					<a href="https://github.com/NotoriousRebel" target="_bank">NotoriousRebel</a>
 					<a href="https://github.com/PronomitaDey" target="_bank">PronomitaDey</a>
+					<a href="https://github.com/sarahleedev" target="_blank">SarahLeeDev</a>
 				</div>
 			</div>
 		</div>
